code upgrade from silly stuff... more upgrades to come